# sof

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  RELEASE_0.5.0.md  pnpm-lock.yaml  pnpm-workspace.yaml
crates/sof-gossip-tuning/: Cargo.toml  README.md
crates/sof-gossip-tuning/fuzz/: Cargo.toml  README.md
crates/sof-gossip-tuning/fuzz/fuzz_targets/: profile_runtime_port.rs
crates/sof-gossip-tuning/src/: constants.rs  lib.rs  newtypes.rs  profiles.rs  tests.rs  types.rs
crates/sof-gossip-tuning/src/application/: mod.rs  ports.rs  service.rs
crates/sof-gossip-tuning/src/domain/: constants.rs  error.rs  mod.rs  model.rs  value_objects.rs
crates/sof-observer/: Cargo.toml  README.md  REVERSE_ENGINEERING.md
crates/sof-observer/benches/: hot_paths.rs
crates/sof-observer/examples/: af_xdp_kernel_bypass_ingress_metrics.rs  derived_state_slot_mirror.rs  kernel_bypass_ingress_metrics.rs  non_vote_tx_logger.rs  observer_inline_transactions.rs  observer_inline_transactions_noop.rs  observer_inline_transactions_with_dataset_noop.rs  observer_multi_hook_noop.rs  observer_runtime.rs  observer_transaction_batches_noop.rs  observer_transaction_view_batches_noop.rs  observer_transactions_noop.rs  observer_with_multiple_plugins.rs  observer_with_non_vote_plugin.rs  provider_stream_laserstream.rs  provider_stream_multi_source.rs  provider_stream_websocket_transaction.rs  provider_stream_yellowstone_grpc.rs  raydium_contract.rs  runtime_extension_observer_ingress.rs  runtime_extension_shared_stream.rs  runtime_extension_udp_listener.rs  runtime_extension_websocket_connector.rs  runtime_extension_with_plugins.rs  tpu_leader_logger.rs  trusted_raw_shred_provider.rs
crates/sof-observer/examples/support/: af_xdp_ingress.rs
crates/sof-observer/fuzz/: .gitignore  Cargo.toml  README.md
crates/sof-observer/fuzz/corpus/dataset_reassembly/: seed_one_op
crates/sof-observer/fuzz/corpus/parse_wire/: seed_tiny  seed_valid_data_shred
crates/sof-observer/fuzz/corpus/plugin_dispatch_events/: seed_prefix
crates/sof-observer/fuzz/corpus/runtime_setup_builder/: seed_mix
crates/sof-observer/fuzz/corpus/shred_fec_recover/: seed_raw
crates/sof-observer/fuzz/corpus/slot_reassembly/: seed_one_op
crates/sof-observer/fuzz/corpus/verify_leader_diff/: seed_prefix
crates/sof-observer/fuzz/corpus/verify_packet/: seed_basic
crates/sof-observer/fuzz/fuzz_targets/: dataset_reassembly.rs  derived_state_replay_host.rs  parse_wire.rs  plugin_dispatch_events.rs  runtime_setup_builder.rs  shred_fec_recover.rs  slot_reassembly.rs  verify_leader_diff.rs  verify_packet.rs
crates/sof-observer/src/: lib.rs  provider_stream.rs  runtime.rs  runtime_env.rs  runtime_metrics.rs
crates/sof-observer/src/app/config/: base.rs  common.rs  gossip.rs  mod.rs  observability.rs  relay.rs  repair.rs
crates/sof-observer/src/app/runtime/: entrypoints.rs  logging.rs  mod.rs  observability.rs  prelude.rs  rpc.rs  runloop.rs  tests.rs
crates/sof-observer/src/app/runtime/bootstrap/: bind.rs  mod.rs  relay.rs  repair.rs  runtime.rs
crates/sof-observer/src/app/runtime/bootstrap/gossip/: entrypoints.rs  handoff.rs  mod.rs  receiver.rs  switch.rs
crates/sof-observer/src/app/runtime/dataset/: attempt_cache.rs  dispatch.rs  mod.rs  process.rs
crates/sof-observer/src/app/runtime/runloop/: control_plane.rs  driver.rs  packet_workers.rs
crates/sof-observer/src/app/state/: commitment.rs  coverage.rs  dedupe.rs  fork.rs  latest.rs  mod.rs  repair.rs
crates/sof-observer/src/event/: mod.rs  types.rs
crates/sof-observer/src/framework/: derived_state.rs  events.rs  extension.rs  extension_host.rs  host.rs  mod.rs  plugin.rs
crates/sof-observer/src/framework/host/: builder.rs  core.rs  dispatch.rs  state.rs  tests.rs
crates/sof-observer/src/ingest/: config.rs  mod.rs  queue.rs
crates/sof-observer/src/ingest/receiver/: core.rs  io.rs
crates/sof-observer/src/protocol/: mod.rs  shred_wire.rs
crates/sof-observer/src/provider_stream/: laserstream.rs  websocket.rs  yellowstone.rs
crates/sof-observer/src/reassembly/: inline.rs  mod.rs  slot.rs
crates/sof-observer/src/reassembly/dataset/: core.rs  mod.rs  stream.rs  tests.rs
crates/sof-observer/src/relay/: cache.rs  server.rs
crates/sof-observer/src/repair/core/: mod.rs  request.rs  tests.rs
crates/sof-observer/src/repair/core/gossip/: core.rs  methods.rs
crates/sof-observer/src/repair/core/tracker/: collect.rs  core.rs  mod.rs  slot_state.rs  slots.rs
crates/sof-observer/src/shred/: mod.rs
crates/sof-observer/src/shred/fec/: core.rs  mod.rs  recover.rs
crates/sof-observer/src/shred/wire/: mod.rs  parser.rs  tests.rs  types.rs  util.rs
crates/sof-observer/src/verify/core/: cache.rs  merkle.rs  mod.rs  packet.rs  tests.rs  types.rs  verifier.rs
crates/sof-observer/tests/: derived_state_runtime_restart_e2e.rs  kernel_bypass_ingress_e2e.rs
crates/sof-solana-compat/: Cargo.toml  README.md
crates/sof-solana-compat/examples/: submit_all_at_once_with_sof.rs
crates/sof-solana-compat/src/: lib.rs  submit_ext.rs  tx_builder.rs
crates/sof-support/: Cargo.toml
crates/sof-support/src/: bench.rs  bytes.rs  collections_support.rs  env_support.rs  lib.rs  short_vec.rs  time_support.rs
crates/sof-tx/: Cargo.toml  README.md
crates/sof-tx/examples/: kernel_bypass_af_xdp.rs  submit_all_at_once_with_sof.rs
crates/sof-tx/fuzz/: Cargo.toml  README.md
crates/sof-tx/fuzz/fuzz_targets/: routing_select_targets.rs  signature_deduper.rs  submit_direct_only.rs  submit_hybrid.rs  submit_jito_mode.rs  submit_rpc_only.rs  tx_builder_toggles.rs
crates/sof-tx/src/: builder.rs  lib.rs  providers.rs  routing.rs  signing.rs  submit.rs
crates/sof-tx/src/adapters/: common.rs  derived_state.rs  mod.rs  plugin_host.rs
crates/sof-tx/src/submit/: client.rs  client_builder.rs  direct.rs  jito.rs  jito_grpc.rs  kernel_bypass.rs  mod.rs  rpc.rs  tests.rs  types.rs
crates/sof-tx/tests/: kernel_bypass_af_xdp_e2e.rs
crates/sof-types/: Cargo.toml  README.md
crates/sof-types/src/: base58.rs  lib.rs  pubkey.rs  signature.rs
(+194 files in other folders)
