[package]
name = "sof-support"
version = "0.18.2"
edition.workspace = true
description = "Shared internal support utilities reused across SOF crates"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Lythaeon/sof"
homepage = "https://github.com/Lythaeon/sof"

[lints]
workspace = true

[dependencies]
sof-types = { version = "0.18.2", path = "../sof-types" }
