[package]
name = "sof-tx"
version = "0.4.0"
edition.workspace = true
description = "SOF transaction SDK for building and submitting Solana transactions"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sof-tx"
readme = "README.md"
repository = "https://github.com/Lythaeon/sof"
homepage = "https://github.com/Lythaeon/sof"
keywords = ["solana", "transactions", "sdk", "routing", "defi"]
categories = ["network-programming", "cryptography::cryptocurrencies"]

[lints]
workspace = true

[features]
default = []
sof-adapters = ["dep:sof"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-compute-budget-interface = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-transaction = { version = "3.0.2", features = ["bincode"] }
sof = { version = "0.4.0", path = "../sof-observer", default-features = false, optional = true }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
arcshift = "0.4.2"
