[package]
name = "sof-tx"
version = "0.18.1"
edition.workspace = true
description = "SOF transaction SDK for building and submitting Solana transactions"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sof-tx"
readme = "README.md"
repository = "https://github.com/Lythaeon/sof"
homepage = "https://github.com/Lythaeon/sof"
keywords = ["solana", "transactions", "sdk", "routing", "defi"]
categories = ["network-programming", "cryptography::cryptocurrencies"]

[lints]
workspace = true

[features]
default = []
sof-adapters = ["dep:sof"]
kernel-bypass = []
jito-grpc = ["dep:prost", "dep:tonic", "dep:tonic-prost"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3.3"
bs58 = "0.5"
prost = { version = "0.14", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-compute-budget-interface = "3.0.0"
solana-connection-cache = "3.1.11"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-packet = "3.0.0"
solana-pubkey = "3.0.0"
solana-quic-client = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-transaction = { version = "3.0.2", features = ["bincode"] }
sof = { version = "0.18.1", path = "../sof-observer", default-features = false, optional = true }
sof-types = { version = "0.18.1", path = "../sof-types", features = ["solana-compat"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tonic = { version = "0.14", optional = true, default-features = false, features = ["codegen", "transport", "tls-webpki-roots"] }
tonic-prost = { version = "0.14", optional = true }
arcshift = "0.4.2"

[dev-dependencies]
xdp = "0.7.3"
