[package]
name = "sof-types"
version = "0.17.1"
edition.workspace = true
description = "Stable SOF-owned primitive types shared across SOF crates"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sof-types"
readme = "README.md"
repository = "https://github.com/Lythaeon/sof"
homepage = "https://github.com/Lythaeon/sof"
keywords = ["solana", "types", "sdk"]
categories = ["network-programming", "cryptography::cryptocurrencies"]

[lints]
workspace = true

[features]
default = []
solana-compat = ["dep:solana-pubkey", "dep:solana-signature"]

[dependencies]
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
solana-pubkey = { version = "3.0.0", optional = true }
solana-signature = { version = "3.1.0", optional = true }
thiserror = "2.0"
